<resources>
    <string name="realm_app_id">smart_plant_monitoring-uftyw</string>
    <string name="app_name">Smart Plantation Monitoring</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="log_in">Login</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="does_not_have_account">Don\'t have an account? Create an account</string>
    <string name="account">Account</string>
    <string name="log_out">Logout</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="last_update">Last update:</string>
    <string name="water_off">The automatic water pump system is turned OFF!</string>
    <string name="water_on">The automatic water pump system is turned ON!</string>
    <string name="health">Health</string>
    <string name="settings">Settings</string>
    <string name="notifications">Alerts</string>
    <string name="plantations">Plantations</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="manual_water_off">The manual water system is turned OFF!</string>
    <string name="manual_water_on">The plantation is being watered!</string>

    <string-array name="plants">
        <item>Tomatoes</item>
        <item>Lettuces</item>
        <item>Cucumber</item>
        <item>Beetroot</item>
        <item>Cabbages</item>
        <item>Corn</item>
        <item>Beans</item>
        <item>Peas</item>
        <item>Apples</item>
        <item>Lentils</item>
        <item>Citrus</item>
        <item>Other</item>
    </string-array>
</resources>