<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="@drawable/bg_gradient"
    android:theme="@style/Theme.Material3.Light.NoActionBar"
    >


    <ImageView
        android:id="@+id/logoSplashScreen"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/forest"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/AppName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="75dp"
        app:tint="#163A20" />


    <TextView
        android:id="@+id/AppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aldrich_regular"
        android:text="Smart Plantation\nMonitoring"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="32sp"
        android:lineHeight="44sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoSplashScreen"
        />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="50dp"
        android:hint="@string/prompt_email"
        android:textSize="18sp"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textColor="#FBFBFB"
        android:textColorHint="#FBFBFB"
        app:backgroundTint="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@id/AppName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/create_account"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColor="#FBFBFB"
        android:textColorHint="#FBFBFB"
        app:backgroundTint="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@id/input_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_create_login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="25dp"
        android:layout_marginHorizontal="50dp"
        android:text="@string/log_in"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/primaryColor"
        app:backgroundTint="@color/colorWhite"
        android:focusable="false"
        android:clickable="false"
        android:enabled="false"
        android:alpha="0.5"
        app:cornerRadius="16dp"
        app:rippleColor="@color/primaryColor"
        app:layout_constraintTop_toBottomOf="@id/input_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/button_existing_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/does_not_have_account"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/colorWhite"
        style="?android:attr/borderlessButtonStyle"
        app:layout_constraintTop_toBottomOf="@id/button_create_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>
